--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -3525,23 +3525,8 @@ previous question, we choose argument \texttt{family} to be
 \textbf{5}? (Read the following note concerning this question).
 
 \begin{rmdtip}
-Note that:
-
-1- There is three different ways to express the equation of a Logistic
-Regression model.
-
-2- Use inline codes to call the coefficients instead of writing them
-manually.
-
-3- You can use Latex to simplify writing equations, you just need to put
-the equation code between two
-\texttt{\textbackslash{}\$\textbackslash{}\$}. For example:
-\texttt{\textbackslash{}\$e\^{}\{\textbackslash{}\textbackslash{}beta\_0+\textbackslash{}\textbackslash{}beta\_1\ X\}\textbackslash{}\$}
-will give \(e^{\beta_0+\beta_1 X}\). Try some equations on this
-\href{https://www.codecogs.com/latex/eqneditor.php}{website}).
-
-4- In fact, for any equation shown on this website, you can right click
-on it and see its corresonding Latex code.
+Note that there is three different ways to express the equation of a
+Logistic Regression model.
 \end{rmdtip}
 
 \textbf{8.} Is the feature \texttt{Age} significant to the model?
@@ -3689,10 +3674,10 @@ Operating Characteristic}}, which when plotted, results in what's known
 as an \textbf{ROC} curve.
 
 \textbf{ROC Curve}: An ROC curve is a two-dimensional plot of
-\emph{sensitivity} (recall, or true positive rate) vs \emph{specificity}
-(false positive rate). The area under the curve is referred to as the
-\textbf{\emph{AUC}}, and is a numeric metric used to represent the
-quality and performance of the classifier (model).
+\emph{sensitivity} (recall, or true positive rate) vs \emph{1-
+specificity} (false positive rate). The area under the curve is referred
+to as the \textbf{\emph{AUC}}, and is a numeric metric used to represent
+the quality and performance of the classifier (model).
 
 \begin{figure}
 \centering
