--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2018-10-03}
+    \date{2018-10-08}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -4597,7 +4597,8 @@ points with the real labels.
 
 \textbf{14.} In order to compare the methods we used, plot on the same
 Figure the ROC curve for each classifier we fitted and compare the
-correspondant AUC. What was the best model for this dataset?
+correspondant AUC. What was the best model for this dataset? Can you
+justify it?
 
 \textbf{Remark:} If you use the \texttt{ROCR} package:
 
@@ -4611,6 +4612,62 @@ correspondant AUC. What was the best model for this dataset?
   \texttt{prediction()} function (those are the posterior probabilities
   that observations belong to class ``1'').
 \end{itemize}
+
+◼
+
+\chapter*{PW 5}\label{pw-5}
+\addcontentsline{toc}{chapter}{PW 5}
+
+This session is special. You are given a dataset on Devinci Online, go
+download it and analyze it. You must submit a report (html) of your
+analysis at the end of the session. This report is the most important
+one for your evaluation.
+
+Pay attention to the objective of the dataset, your analysis depends on
+your dataset's understanding. The data analysis must include all the
+following steps: importing the dataset, exploring the dataset and
+describing it, data preprocessing, data splitting, building models and
+assessing models.
+
+Here are somes rules for this special session:
+
+\begin{itemize}
+\item
+  The dataset will be available on Devinci Online during the session.
+\item
+  When you use the function \texttt{set.seed()} to split the dataset,
+  use your \textbf{student's number}.
+\item
+  The professor will not give you any hint. You can ask questions but
+  the professor will not answer all of your questions. It depends on the
+  question.
+\item
+  Of course every student must work individually and no discussions are
+  allowed.
+\item
+  You have the right to access internet, the course's website, and even
+  googling some R tips for your codes. But you are not allowed to open
+  any Social Network website neither your email. If you open one of
+  these you will get directly zero.
+\item
+  The professor has the right to verify by himself if you are opening
+  any Social network/email website.
+\item
+  The report must be written in english of course.
+\item
+  There won't be a quiz in this special session in order to give you the
+  complete 3 hours to analyze the dataset.
+\end{itemize}
+
+\begin{itemize}
+\tightlist
+\item
+  Your report must be clear. Every step or decision you make must be
+  explained. Your code must be commented and your results must be
+  interpreted.
+\end{itemize}
+
+Good Luck!
 
 ◼
 
